[gd_scene load_steps=15 format=3 uid="uid://mfqv438mljqk"]

[ext_resource type="Script" path="res://nodes/entities/player.gd" id="1_36kp7"]
[ext_resource type="Material" uid="uid://b7n4qkux5vhur" path="res://art/particles/rear_thruster.tres" id="2_0vb0s"]
[ext_resource type="Texture2D" uid="uid://bqlytuu7wce12" path="res://art/smoke.png" id="2_8u5a1"]
[ext_resource type="Script" path="res://nodes/entities/player_gfx.gd" id="2_13ux2"]
[ext_resource type="Texture2D" uid="uid://s4to67ffk84f" path="res://art/ships.png" id="2_xem4q"]
[ext_resource type="Script" path="res://nodes/rig.gd" id="3_4bv3y"]
[ext_resource type="Script" path="res://nodes/control_input.gd" id="3_yyr7e"]
[ext_resource type="Material" uid="uid://brt0y8nov3m3p" path="res://art/particles/front_thruster.tres" id="4_04b32"]
[ext_resource type="Script" path="res://nodes/selector.gd" id="5_2irkj"]
[ext_resource type="Material" uid="uid://cj5njdm4nnfgt" path="res://art/particles/left_thruster.tres" id="5_i7xd3"]
[ext_resource type="Material" uid="uid://bec50nfrdryjn" path="res://art/particles/right_thruster.tres" id="6_egin3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2y04v"]
radius = 8.0
height = 60.0

[sub_resource type="AtlasTexture" id="AtlasTexture_4ay1r"]
atlas = ExtResource("2_xem4q")
region = Rect2(160, 64, 22, 60)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aaeek"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("camera", "rig", "control", "selector")]
script = ExtResource("1_36kp7")
camera = NodePath("Camera2D")
rig = NodePath("Rig")
control = NodePath("InputControl")
selector = NodePath("Selector")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_2y04v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
rotation = 1.5708
texture = SubResource("AtlasTexture_4ay1r")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="PlayerGFX" type="Node2D" parent="." node_paths=PackedStringArray("input_control")]
script = ExtResource("2_13ux2")
input_control = NodePath("../InputControl")

[node name="RearThruster" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(-30, 0)
emitting = false
process_material = ExtResource("2_0vb0s")
texture = ExtResource("2_8u5a1")

[node name="FrontThrusterR" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(22, 6)
emitting = false
process_material = ExtResource("4_04b32")
texture = ExtResource("2_8u5a1")

[node name="FrontThrusterL" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(22, -6)
emitting = false
process_material = ExtResource("4_04b32")
texture = ExtResource("2_8u5a1")

[node name="LeftThrusterF" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(17, -8)
emitting = false
process_material = ExtResource("5_i7xd3")
texture = ExtResource("2_8u5a1")

[node name="LeftThrusterR" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(-16, -10)
emitting = false
process_material = ExtResource("5_i7xd3")
texture = ExtResource("2_8u5a1")

[node name="RightThrusterF" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(17, 8)
emitting = false
process_material = ExtResource("6_egin3")
texture = ExtResource("2_8u5a1")

[node name="RightThrusterR" type="GPUParticles2D" parent="PlayerGFX"]
material = SubResource("CanvasItemMaterial_aaeek")
position = Vector2(-16, 10)
emitting = false
process_material = ExtResource("6_egin3")
texture = ExtResource("2_8u5a1")

[node name="Rig" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_4bv3y")
player = NodePath("..")

[node name="InputControl" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_yyr7e")
player = NodePath("..")
thrust_strength = 0.3
drag = 0.06

[node name="Selector" type="Node2D" parent="."]
script = ExtResource("5_2irkj")
